tests_bucklescript/__snapshots__/Error_Apollo_missingField_re.25dfdf9b.0.snapshot
Error Apollo › missingField1.re › output
File \"operations/errors/missingField1.re\", line 6, characters 6-27:
6 |       thisFieldDoesNotExist
          ^^^^^^^^^^^^^^^^^^^^^
Error: Unknown field 'thisFieldDoesNotExist' on type CustomScalarObject

  We've found a bug for you!
  operations/errors/missingField1.re
  
  Error while running external preprocessor
Command line: ../_build/default/src/bucklescript_bin/bin.exe -apollo-mode '/var/folders/nn/nkqr2fl53p93lzfh2n6s17hh0000gn/T/camlppx49a47b' '/var/folders/nn/nkqr2fl53p93lzfh2n6s17hh0000gn/T/camlppxa1d257'

  

